--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to AWS EC2 with Docker
+name: Deploy to EC2 with Docker
 
 on:
   push:
@@ -10,16 +10,18 @@ jobs:
     runs-on: self-hosted
 
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Build Docker Image
-      run: docker build -t my-html-app .
+      - name: Build Docker image
+        run: |
+          docker build -t my-app .
 
-    - name: Stop and Remove Old Container
-      run: |
-        docker stop my-html-container || true
-        docker rm my-html-container || true
+      - name: Stop existing container (if running)
+        run: |
+          docker stop my-app-container || true
+          docker rm my-app-container || true
 
-    - name: Run New Container
-      run: docker run -d -p 80:80 --name my-html-container my-html-app
+      - name: Run Docker container
+        run: |
+          docker run -d --name my-app-container -p 80:86 my-app
